Update for IDEA 233.*, fix deprecations, add emptyPathPrefixes, cleanup code